<resources>
    <!-- Login Page Text -->
    <string name="app_name">Farmer App</string>
    <string name="loginPageText1">Login</string>
    <string name="loginPageText2">to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="signUp">Sign Up</string>
    <string name="new_to_farmer_portal_sign_up_free">New to Farmer Portal? Sign Up Free</string>

    <!-- Navigation Drawer -->
    <string name="openNavDrawer">Navigation Drawer open</string>
    <string name="closeNavDrawer">Navigation Drawer close</string>
    <string name="welcome">Welcome</string>

    <!-- Sign Up Page -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_icon">back navigation icon</string>
    <string name="phone">Phone</string>
    <string name="full_name">Full Name</string>
    <string name="loading">Loading</string>
    <string name="title_activity_crop_price_info">Crop Price</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Login Page Text -->

    <!-- Login Page Text -->

    <!-- Login Page Text -->
</resources>