<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:paddingTop="?attr/actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:paddingVertical="15dp"
            android:text="Query Form"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            android:textSize="28sp" />

        <Button
            android:id="@+id/loadDraftForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:text="Load From draft" />

        <EditText
            android:id="@+id/editTextTextPersonNameForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextPhoneForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone" />

        <Button
            android:id="@+id/getLocationForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:text="Get Current Location" />

        <EditText
            android:id="@+id/editTextTextPostalAddressForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:ems="10"
            android:hint="Address"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:ems="10"
            android:gravity="start|top"
            android:hint="Query"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/saveToDraftForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:text="Save as Draft" />

        <Button
            android:id="@+id/submitForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:text="@string/submit" />

    </LinearLayout>
</ScrollView>